# simple-renderer

./: .gitmodules  CMakeLists.txt  README.md
example/: 01-hello-world.cpp  02-instanced-mesh.cpp  CMakeLists.txt  demo.cpp  renderer-example-common.cpp  renderer-example-common.hpp
examples/: 01-hello-world.cpp  02-instanced-mesh.cpp  CMakeLists.txt
include/simple-renderer/: allocation_registry.hpp  buffer.hpp  buffer_range.hpp  buffer_ref.hpp  camera.hpp  command_collector.hpp  command_queue.hpp  draw_command.hpp  drawable.hpp  glm_type_traits.hpp  glsl_definitions.hpp  gpu_buffer.hpp  image_data.hpp  instanced_mesh.hpp  mesh.hpp  mesh_descriptor.hpp  render_queue.hpp  renderer.hpp  shader_program.hpp  texture_2d.hpp  type_set.hpp  typed_offset.hpp  typed_range.hpp  vertex_array.hpp  vertex_attribute_specification.hpp  vertex_buffer.hpp  vertex_data_loader.hpp
include/simple_renderer/: allocation_registry.hpp  buffer_range.hpp  command_collector.hpp  glm_type_traits.hpp  image_data.hpp  mesh.hpp  mesh_descriptor.hpp  render_queue.hpp  renderer.hpp  shader_program.hpp  texture_2d.hpp  typed_offset.hpp  typed_range.hpp  vertex_array.hpp  vertex_attribute_specification.hpp  vertex_buffer.hpp  vertex_data_loader.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  allocation_registry.cpp  buffer.cpp  buffer.hpp  buffer_range.cpp  buffer_ref.cpp  camera.cpp  command_queue.cpp  draw_command.cpp  glsl_definitions.cpp  glsl_definitions.hpp  glsl_syntax.cpp  glsl_syntax.hpp  image_data.cpp  instanced_mesh.cpp  mesh.cpp  mesh_descriptor.cpp  render_queue.cpp  renderer.cpp  shader_program.cpp  shader_variables.cpp  shader_variables.hpp  texture_2d.cpp  vertex_array.cpp  vertex_attribute_specification.cpp  vertex_buffer.cpp  vertex_buffer.hpp
test/: test.cpp
tests/: CMakeLists.txt  catch_main.cpp  ostream_operators.hpp  test.cpp
